--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_fonts: ^5.1.0
   carousel_slider: ^4.2.1
   http: ^1.1.0
+  shared_preferences: ^2.0.0
   
 
 dev_dependencies:
@@ -31,4 +32,4 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
